--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,10 +11,6 @@ html
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
 }
-#main
-{
-
-}
 
 .clear
 {
@@ -151,7 +147,7 @@ html
 {
     position: relative;
     padding-top: 50%;
-    background:  url('/assets/img/chicago.jpg') top center / cover no-repeat ;
+    background:  url(https://www.w3schools.com/w3images/la.jpg) top center / cover no-repeat ;
 }
 
 #slider .text-content 
