--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -12,6 +12,10 @@
 
 @media (min-width: 100px) and (max-width:700px)
 {
+    #header 
+    {
+        overflow: hidden;
+    }
     #nav
     {
         display: block;
